--- a/skysub.tex
+++ b/skysub.tex
@@ -39,18 +39,17 @@
 \newcommand{\Sec}[1]{\S\ref{sec:#1}}  % section reference macro
 
 % To track draft versions in git
-\IfFileExists{vc.tex}{\input{vc}}{}
+% \IfFileExists{vc.tex}{\input{vc}}{}
 
 % aastex setup
 \shorttitle{\myshorttitle}
 \shortauthors{\myshortauthors}
 
 \begin{document}
-    \IfFileExists{vc.tex}{\slugcomment{Version \VCRevision\ by \VCAuthor\ on \VCDateTEX , \VCTime.}
-}{\slugcomment{Revision unknown.}}
-% \title{ANDROIDS I. Wide-Field Near-Infrared Imaging of the Andromeda Galaxy (M31)}
-% \title{ANDROIDS I. New Insights in Near-IR Photometry of Extended Sources from the Andromeda Galaxy (M31)}
-\title{ANDROIDS I. New Insights in Extremely Wide-Field Near-IR Surface Photometry\\ with the Andromeda Galaxy (M31)}
+    % \IfFileExists{vc.tex}{\slugcomment{Version \VCRevision\ by \VCAuthor\ on \VCDateTEX , \VCTime.}
+% }{\slugcomment{Revision unknown.}}
+\slugcomment{Submitted to AJ.}
+\title{ANDROIDS I. New Insights in Wide-Field Near-IR Surface Photometry\\ with the Andromeda Galaxy (M31)}
 \author{Jonathan Sick, Stéphane Courteau}
 \affil{Department of Physics, Engineering Physics \& Astronomy, Queen's University, Kingston, Ontario, K7L 3N6 Canada}
 \email{jsick@astro.queensu.ca}
@@ -164,10 +163,10 @@ Finally in Section~\ref{sec:conclusions} we summarize the uncertainty of NIR sky
 \centering
 \includegraphics[width=\columnwidth]{figs/fieldmap_colour}
 \caption{\androids\ WIRCam field positions on M31.
-Central blue fields are the 27 disk fields observed in 2007B, surrounded by 4 sky fields (blue with dotted outlines).
+Central blue fields are the 27 disk fields observed in 2007B, surrounded by 4 sky fields (blue with solid black outlines).
 Red fields at center are the 12 disk fields observed in 2009B.
 The red ring of 53 fields is the 2009B sky sampling ring.
-The yellow ellipse marks the M31 disk at $R=20$ kpc along the major axis.
+The dashed yellow ellipse marks the M31 disk at $R=20$ kpc along the major axis.
 Coordinates are centered on the nucleus of M31 with North up, and East is left.
 Plotted against a star count map of M31 produced with the Isaac Newton Telescope, from \cite{Ibata:2005}, which shows that our sky fields lie beyond the stellar content of M31's disk.}
 \label{fig:fieldmap}
@@ -738,7 +737,7 @@ Recall that sky offsets are optimized hierarchically: WIRCam frames are fitted t
 % But note that in WIRCam instrumental ADU/s, teh mean sky levels are:
 % J: 122 ADU/s, Ks: 488 ADU/s. see $andpipe/wircam/skyanalysis/mean_sky_level.py
 
-Note that the sky offsets, as a percentage of sky level, are comparable in the $J$ and $K_s$ bands, despite the sky glow being $\sim 4\times$ brighter in $K_s$ than $J$ (see \Fig{net_sky_level}).
+Note that the sky offsets, as a percentage of sky level, are comparable in the $J$ and $K_s$ bands, despite the skyglow being $\sim 4\times$ brighter in $K_s$ than $J$ (see \Fig{net_sky_level}).
 This indicates that spatio-temporal variations in the NIR sky are monochromatic.
 
 Within the hierarchy of sky fitting, simply fitting frames to a stack (with $\Delta_F$) is most significant: a correction on the order of 2\% of the sky intensity.
@@ -875,7 +874,7 @@ How does our sky-target nodding program affect the magnitude of the sky offsets?
 This was partially addressed in \Sec{offset_amplitudes}, where both the 2007B and 2009B observing programs resulted in similar net offset distributions (\Tab{offset_hierarchy}).
 In this section, we directly map the observed sky offsets as a function of time latency relative to the sky observation.
 
-First, we must realize that sky offsets are born not only from temporal variability in the sky level (\eg \Fig{skylevel_timeseries}), but also from spatial structure in the NIR sky glow.
+First, we must realize that sky offsets are born not only from temporal variability in the sky level (\eg \Fig{skylevel_timeseries}), but also from spatial structure in the NIR skyglow.
 Thus as a fiducial, we first build a function of mean sky level variation as a function of time measured at stationary site on the sky (a single sky field), without telescope nodding.
 In \Fig{nodding_stationary_skyvar_skyfrac} we plot the mean and 95\% growth of sky level variations as a function of time.
 In agreement with \cite{Vaduvescu:2004}, we see a mean sky level variation of $\sim 0.5\%$ in 1~minute in both $J$ and $K_s$ bands.
@@ -1075,8 +1074,8 @@ Recall that median sky images are composed of five sky frames taken closest to a
 In 2007B, all sky frames were sampled from the same coordinate on the sky, and span a 12~minute window covering sky integrations taken before and after a disk image (for both $J$ and $K_s$ sky-target nods).
 In 2009B, sky frames were sampled from randomly chosen sites along the sky field ring (\Fig{fieldmap}) with a window typically spanning 15 minutes.
 Thus both 2007B and 2009B median sky images span similar time windows, although the 2009B strategy attempts to marginalize over five distinct sites  on the sky (and thus sky shapes) while 2007B median sky images do not.
-If the spatial sky glow pattern and WIRCam flatness function were stationary, we expect the instantaneous shape of the sky (in the sky field) to be captured in the 2007B median sky frames, while the 2009B sky frames should marginalize over five random sky shapes and thus be flatter by up to a factor of $1/\sqrt{5}$ (for a Gaussian shape distribution).
-That this \emph{does not} occur indicates either that (a) sky shapes are correlated over 15~minutes and 3\arcdeg\ of sky, (b) sky glow patterns have sufficient temporal variability to be effectively uncorrelated over 15~minute windows across a WIRCam frame so that both observing patterns marginalize over sky shapes equally, or (c) the flatness of median sky images is limited at the 0.3\% level by background variations associated with WIRCam itself over 15~minutes.
+If the spatial skyglow pattern and WIRCam flatness function were stationary, we expect the instantaneous shape of the sky (in the sky field) to be captured in the 2007B median sky frames, while the 2009B sky frames should marginalize over five random sky shapes and thus be flatter by up to a factor of $1/\sqrt{5}$ (for a Gaussian shape distribution).
+That this \emph{does not} occur indicates either that (a) sky shapes are correlated over 15~minutes and 3\arcdeg\ of sky, (b) skyglow patterns have sufficient temporal variability to be effectively uncorrelated over 15~minute windows across a WIRCam frame so that both observing patterns marginalize over sky shapes equally, or (c) the flatness of median sky images is limited at the 0.3\% level by background variations associated with WIRCam itself over 15~minutes.
 Wide-field movies of the NIR sky \citep{Adams:1996} suggest option (a) to be false.
 From this test alone, then, we cannot distinguish between instrumental background variability or stochasticity in the sky as the cause of the 0.3\% sky shape amplitudes seen by WIRCam median sky images.
 Further, this test cannot distinguish between proportional instrumental variability in the flat field (\eg \Fig{fw100k_movie}) or additive background variability \citep[as seen in the CFHT-IR camera,][]{Vaduvescu:2004}.
@@ -1219,18 +1218,18 @@ We have also developed and tested our WIRCam pipeline for flat fielding, zeropoi
 
 We find that our NIR SB reconstruction is limited in two regimes: large scale reconstruction of surface brightness with sky offsets, and surface brightness \emph{shape} uncertainties across individual WIRCam images.
 On a large scale, the necessity of nodding between sky and target limits our direct knowledge of the sky level on the disk by $\gtrsim 2$\% of the sky level.
-Strictly minimizing latency between sky and disk integrations (as in the 2009B program) provides only limited improvement in our knowledge of the sky level on the disk because of the overhead in nodding the telescope, and spatial structure in the NIR sky glow itself.
+Strictly minimizing latency between sky and disk integrations (as in the 2009B program) provides only limited improvement in our knowledge of the sky level on the disk because of the overhead in nodding the telescope, and spatial structure in the NIR skyglow itself.
 Sky offset optimization is successful in reducing block-to-block surface brightness differences to $<0.1$\% of the sky level.
 Given a realized set of blocks, our optimization algorithm reliably finds a consistent solution, so any errors in surface brightness shape across the mosaic are caused by errors in the shapes of individual blocks (see below).
-The absolute surface brightness of the mosaic, however, is uncertain up to the level of our assertion that the net sky offset applied to the images is zero ($\sim \sigma_{\Delta_B} / \sqrt{N_\mathrm{blocks}}$; 0.16\% of the sky level in our mosaics).
-This zeropoint can ultimately be established using resolved stellar populations, the subject of a forth coming \androids\ study.
+There is, however, an uncertainty in our net zero offset, of order $\sim \sigma_{\Delta_B} / \sqrt{N_\mathrm{blocks}}$; 0.16\% of the sky level.
+This zeropoint can ultimately be established using resolved stellar populations, the subject of a forthcoming \androids\ study.
 
 The shape of a WIRCam frame can be affected by both flat field uncertainties and additive background uncertainties.
 First, we have discovered that the WIRCam flat field function can change by 1\% in 60~minutes.
-This effect is predominantly influential in the signal dominated regime of the M31 bulge; though it is also significant for resolved stellar photometry.
+This effect is predominantly influential in the signal-dominated regime of the M31 bulge; though it is also significant for resolved stellar photometry.
 We thus find that constructing real-time sky flats is essential for calibrating WIRCam images.
 In sky-dominated regimes, the 2D SB shapes of individual WIRCam frames ($20\arcmin\times20\arcmin$) are uncertain by 0.2\% of the sky intensity, centre-to-edge.
-These background fluctuations present a lower limit in the surface brightness uncertainty across a WIRCam frame since they appear to be caused by sky glow variations in target images that cannot be fully corrected with median sky subtraction.
+These background fluctuations present a lower limit in the surface brightness uncertainty across a WIRCam frame since they appear to be caused by skyglow variations in target images that cannot be fully corrected with median sky subtraction.
 
 We now summarize our analysis of the data taking and reduction methods developed in this work, and in doing so, formulate a set of best practices for similar wide-field NIR surveys employing sky-target nodding.
 
@@ -1243,20 +1242,21 @@ In the $K_s$ band this objective is efficiently achieved, since the mean sky flu
 Given $T_\mathrm{exp}=25$~s, a $\mathrm{[S^3T^6]^3}$ program yields the necessary 9 sky integrations within 20~minutes and a maximum sky-target latency of 2~minutes.
 Each sky flat would be built from observations at three sites along the sky ring.
 
-Lower sky flux in the $J$ band ($120 \pm 30$~ADU~s$^{-1}$) makes achieving 10$^5$ sky ADU more difficult.
+Lower sky flux in the $J$ band ($120 \pm 30$~ADU~s$^{-1}$) requires additional sky integration  to achieve comparable sky flat $S/N$ as the $K_s$ band.
 Given $T_\mathrm{exp}=45$~s, a $\mathrm{[S^4T^4]^5}$ program yields the necessary 20 sky integrations in $\sim 40$ minutes, with a maximum sky-target latency of 2.2~minutes.
-A solution may be to build sky flats with fewer than $10^5$~ADU.
 
 Sky offsets optimization is aided by having more independent blocks covering the target, since our net zero offset assertion is uncertain by $\sigma_{\Delta_B} / \sqrt{N_\mathrm{blocks}}$.
 Given that $\sigma_B$ cannot be reduced, increasing the number of \emph{independent} blocks (observed hours or even a night apart to decouple sky and instrumental biases) is the most reliable way to establish the absolute surface brightness accuracy of the mosaic.
-Since sky offsets are further biased by any shape errors in blocks (realized as our inability to diminish block-to-block offsets below $\sim~0.1\%$ of sky brightness), we propose that blocks be interlaced by 50\% (so that one detector completely overlaps a detector from an adjacent blocks).
+Since sky offsets are further biased by any shape errors in blocks (realized as our inability to diminish block-to-block offsets below $\sim 0.1\%$ of sky brightness), we propose that blocks be interlaced by 50\% (so that one detector completely overlaps a detector from an adjacent blocks).
 This interlacing pattern would thus enable the marginalization of shape errors across the entire detector frame.
 By doubling the number of blocks, each with individually halved exposure times, the mosaic could be reproduced with an equivalent net integration time.
 % \todo{Would this scheme increase the uncertainty in the sky level of each block, since there would be only half as many blocks? Then again, we double the number of blocks, so the uncertainty should be unchanged. Verify this.}
 
-\bigskip We wish to thank Loic Albert and Karun Thanjavur, previously from CFHT, for their help with WIRCam I'iwi data products and procedures.
+\bigskip We thank Loic Albert and Karun Thanjavur, previously from CFHT, for their help with WIRCam I'iwi data products and procedures.
 J.S. and S.C. acknowledge support through respective Graduate Scholarship and Discovery grants from the Natural Sciences and Engineering Research Council of Canada.
 M.M is supported by NASA through a Hubble Fellowship grant HST-HF51308.01-A awarded by the Space Telescope Science Institute, which is operated by the Association of Universities for Research in Astronomy, Inc., for NASA, under contract NAS 5-26555.
+This publication makes use of data products from the Two Micron All Sky Survey, which is a joint project of the University of Massachusetts and the Infrared Processing and Analysis Center/California Institute of Technology, funded by the National Aeronautics and Space Administration and the National Science Foundation.
+This work is based on observations obtained with WIRCam, a joint project of CFHT, Taiwan, Korea, Canada, France, at the Canada-France-Hawaii Telescope (CFHT) which is operated by the National Research Council (NRC) of Canada, the Institute National des Sciences de l'Univers of the Centre National de la Recherche Scientifique of France, and the University of Hawaii. J.S. thanks the CFHT staff for many informative discussions and their diligence in performing the queue service observations.
 
 \bibliography{master}
 
