--- a/skysub.tex
+++ b/skysub.tex
@@ -57,6 +57,8 @@
 \affil{Canada-France-Hawaii Telescope Corp., Kamuela, HI 96743, USA}
 \author{Michael McDonald}
 \affil{Kavli Institute for Astrophysics and Space Research, MIT, Cambridge, MA 02139, USA}
+\author{Roelof de Jong}
+\affil{Astrophysikalisches Institut Potsdam (AIP), An der Sternwarte 16, 14482 Potsdam, Germany}
 \and
 \author{Brent Tully}
 \affil{Institute for Astronomy, University of Hawaii, 2680 Woodlawn Drive, Honolulu, HI, USA}
