--- a/skysub.tex
+++ b/skysub.tex
@@ -1260,6 +1260,8 @@ M.M is supported by NASA through a Hubble Fellowship grant HST-HF51308.01-A awar
 This publication makes use of data products from the Two Micron All Sky Survey, which is a joint project of the University of Massachusetts and the Infrared Processing and Analysis Center/California Institute of Technology, funded by the National Aeronautics and Space Administration and the National Science Foundation.
 This work is based on observations obtained with WIRCam, a joint project of CFHT, Taiwan, Korea, Canada, France, at the Canada-France-Hawaii Telescope (CFHT) which is operated by the National Research Council (NRC) of Canada, the Institute National des Sciences de l'Univers of the Centre National de la Recherche Scientifique of France, and the University of Hawaii. J.S. thanks the CFHT staff for many informative discussions and their diligence in performing the queue service observations.
 
+{\it Facilities:} \facility{CFHT (WIRCam)}, \facility{FLWO:2MASS}.
+
 \bibliography{master}
 
 \end{document}
