--- a/skysub.tex
+++ b/skysub.tex
@@ -81,7 +81,7 @@ To overcome flat field variability of order 1\% over 30 minutes, we find that WI
 Due either to atmospheric or instrumental variations, the individual WIRCam frames have typical residual shapes with amplitudes of 0.2\% of the sky after real-time flat fielding and median sky subtraction.
 We present our WIRCam reduction pipeline and performance analysis here as a template for future near-infrared observers needing wide-area surface brightness maps with sky-target nodding, and give specific recommendations for improving photometry of all CFHT/WIRCam programs.
 \end{abstract}
-
+\keywords{methods: observational, techniques: photometric}
 % ============================================================================
 \section{Introduction}
 \label{sec:intro}
